convert ivar tsv to vcf;add pacbam process/image

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -15,6 +15,8 @@ samtools_coverage_container = 'staphb/samtools:1.10'
 samtools_flagstat_container = 'staphb/samtools:1.10'
 bedtools_container = 'staphb/ivar:1.2.2_artic20200528'
 pangolin_container = 'staphb/pangolin:1.1.14'
+pacbam_container = 'cibiobcg/pacbam:latest'
+postprocess_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
 
 process {
 
@@ -93,6 +95,16 @@ process {
   withName:kraken2{
     container = fastqc_container
     cpus = 4
+    memory = '8 GB'
+  }
+  withName:pacbam{
+    container = pacbam_container
+    cpus = 2
+    memory = '8 GB'
+  }
+  withName:post_process{
+    container = postprocess_container
+    cpus = 2
     memory = '8 GB'
   }
 }
