Added vadr functionality to Cecret_alltools.nf. Added vadr container to singularity.config.

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -18,6 +18,9 @@ pangolin_container = 'staphb/pangolin:1.1.14'
 pacbam_container = 'cibiobcg/pacbam:latest'
 postprocess_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
 
+vadr_container = 'staphb/vadr:1.1.3'
+
+
 process {
 
 
@@ -104,6 +107,11 @@ process {
   }
   withName:post_process{
     container = postprocess_container
+    cpus = 2
+    memory = '8 GB'
+  }
+  withName:vadr{
+    container = vadr_container
     cpus = 2
     memory = '8 GB'
   }
