add cleanup, SINGULARITY_CACHE;ivar_vcf updated

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -1,112 +1,34 @@
 singularity {
   enabled = true
   autoMounts = true
+  cacheDir = "SINGULARITY_CACHE"
 }
 
-seqyclean_container = 'staphb/seqyclean:1.10.09'
-fastqc_container = 'staphb/fastqc:0.11.8'
-bwa_container = 'staphb/ivar:1.2.2_artic20200528'
-ivar_trim_container = 'staphb/ivar:1.2.2_artic20200528'
-samtools_sort_container = 'staphb/ivar:1.2.2_artic20200528'
-ivar_variants_container = 'staphb/ivar:1.2.2_artic20200528'
-ivar_consensus_container = 'staphb/ivar:1.2.2_artic20200528'
-samtools_stats_container = 'staphb/ivar:1.2.2_artic20200528'
-samtools_coverage_container = 'staphb/samtools:1.10'
-samtools_flagstat_container = 'staphb/samtools:1.10'
-bedtools_container = 'staphb/ivar:1.2.2_artic20200528'
-pangolin_container = 'staphb/pangolin:1.1.14'
-pacbam_container = 'cibiobcg/pacbam:latest'
-postprocess_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
 
+// containers for our custom scripts
+pacbam_container = 'cibiobcg/pacbam:latest'
+ivar_vcf_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
 vadr_container = 'staphb/vadr:1.1.3'
 
+// this will clean up the work directory after each run
+cleanup = true
+
+includeConfig 'containers.config'
 
 process {
 
 
   errorStrategy = 'retry'
-  maxRetries = 1
+  maxRetries = 3
 
   cpus = 4
   memory = '8 GB'
 
-  withName:seqyclean{
-    container = seqyclean_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:fastqc{
-    container = fastqc_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:bwa{
-    container = bwa_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:ivar_trim{
-    container = ivar_trim_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:ivar_variants{
-    container = ivar_variants_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:ivar_consensus{
-    container = ivar_consensus_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:samtools_stats{
-    container = samtools_stats_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:samtools_coverage{
-    container = samtools_coverage_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:samtools_flagstat{
-    container = samtools_flagstat_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:bedtools{
-    container = bedtools_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:pangolin{
-    container = pangolin_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:summary{
-    container = fastqc_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:combined_summary{
-    container = fastqc_container
-    cpus = 4
-    memory = '8 GB'
-  }
-  withName:kraken2{
-    container = fastqc_container
-    cpus = 4
-    memory = '8 GB'
-  }
   withName:pacbam{
     container = pacbam_container
-    cpus = 2
-    memory = '8 GB'
   }
-  withName:post_process{
-    container = postprocess_container
+  withName:ivar_vcf{
+    container = ivar_vcf_container
     cpus = 2
     memory = '8 GB'
   }
@@ -117,4 +39,6 @@ process {
   }
 }
 
-includeConfig 'containers.config'
+
+
+
