add multi-QC and ave_cov_depth processes

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -9,6 +9,9 @@ singularity {
 pacbam_container = 'cibiobcg/pacbam:latest'
 ivar_vcf_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
 vadr_container = 'staphb/vadr:1.1.3'
+mqc_container = 'ewels/multiqc:latest'
+aocd_bwa_container = 'staphb/bwa:latest'
+aocd_samtools_container = 'staphb/samtools:latest'
 
 // this will clean up the work directory after each run
 cleanup = true
@@ -19,7 +22,7 @@ process {
 
 
   errorStrategy = 'retry'
-  maxRetries = 3
+  maxRetries = 1
 
   cpus = 4
   memory = '8 GB'
@@ -35,6 +38,21 @@ process {
   withName:vadr{
     container = vadr_container
     cpus = 2
+    memory = '8 GB'
+  }
+  withName:mqc{
+    container = mqc_container
+    cpus = 2
+    memory = '8 GB'
+  }
+  withName:aocd_bwa{
+    container = aocd_bwa_container
+    cpus = 4
+    memory = '8 GB'
+  }
+  withName:aocd_samtools{
+    container = aocd_samtools_container
+    cpus = 4
     memory = '8 GB'
   }
 }
