process SC2Ref_matched_reads, fix floating point

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -12,6 +12,7 @@ vadr_container = 'staphb/vadr:1.1.3'
 mqc_container = 'ewels/multiqc:latest'
 aocd_bwa_container = 'staphb/bwa:latest'
 aocd_samtools_container = 'staphb/samtools:latest'
+SC2Ref_matched_reads_container = 'staphb/samtools:latest'
 
 // this will clean up the work directory after each run
 cleanup = true
@@ -52,6 +53,11 @@ process {
   }
   withName:aocd_samtools{
     container = aocd_samtools_container
+    cpus = 4
+    memory = '8 GB'
+  }
+  withName:SC2Ref_matched_reads{
+    container = SC2Ref_matched_reads_container
     cpus = 4
     memory = '8 GB'
   }
