--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,12 @@
 **/.idea
 Cecret/configs/vadr-models-corona-1.1.3-1/
 
+# Ignore intermediate R files
+.Rproj.user
+/Cecret/bin/report/.Rhistory
+/Cecret/bin/report/.RData
+/Cecret/bin/report/examples/
+/Cecret/bin/report/ref_docs/
+**/Cecret/bin/report/*_cache/
+/Cecret/bin/report/_site/
+
