add /** for reads folder; include fixedversion containers.config

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -18,6 +18,7 @@ SC2Ref_matched_reads_container = 'staphb/samtools:latest'
 cleanup = true
 
 includeConfig 'containers.config'
+//includeConfig 'containers_fixedversion.config'
 
 process {
 
