Fixed vadr process to always use latest version of vadr as well as use the containerized set of model files

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -8,7 +8,7 @@ singularity {
 // containers for our custom scripts
 pacbam_container = 'cibiobcg/pacbam:latest'
 ivar_vcf_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
-vadr_container = 'staphb/vadr:1.1.3'
+vadr_container = 'staphb/vadr:latest'
 mqc_container = 'ewels/multiqc:latest'
 aocd_bwa_container = 'staphb/bwa:latest'
 aocd_samtools_container = 'staphb/samtools:latest'
