--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ Cecret/configs/vadr-models-corona-1.1.3-1/
 /Cecret/bin/report/.Rhistory
 /Cecret/bin/report/.RData
 /Cecret/bin/report/examples/
-/Cecret/bin/report/ref_docs/
+/Cecret/bin/report/ref_docs/*.html
 **/Cecret/bin/report/*_cache/
 /Cecret/bin/report/_site/
 
