--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -62,6 +62,12 @@ process {
     cpus = 4
     memory = '8 GB'
   }
+  withName:samtools_insertsizes{
+    container = aocd_samtools_container
+    cpus = 4
+    memory = '8 GB'
+  }
+  
 }
 
 
