Created pacbam_orf process to run pacbam on open reading frames. Updated singularity.config to include containter with said process

--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -32,6 +32,9 @@ process {
   withName:pacbam{
     container = pacbam_container
   }
+  withName:pacbam_orfs{
+    container = pacbam_container
+  }
   withName:ivar_vcf{
     container = ivar_vcf_container
     cpus = 2
