lock container version; remove hard-coded calling nextflow executable

--- a/Cecret/configs/containers.config
+++ b/Cecret/configs/containers.config
@@ -80,4 +80,31 @@ process {
   withName:combine_fastas{
     container = 'staphb/parallel-perl:latest'
   }
+  withName:mqc{
+    container = 'ewels/multiqc:latest'
+  }
+  withName:pacbam{
+    container = 'cibiobcg/pacbam:latest'
+  }
+  withName:vadr{
+    container = 'staphb/vadr:latest'
+  }
+  withName:aocd_bwa{
+    container = 'staphb/bwa:latest'
+  }
+  withName:aocd_samtools{
+    container = 'staphb/samtools:latest'
+  }
+  withName:SC2Ref_matched_reads{
+    container = 'staphb/samtools:latest'
+  }
+  withName:samtools_insertsizes{
+    container = 'staphb/samtools:latest'
+  }
+  withName:pacbam_orfs{
+    container = 'cibiobcg/pacbam:latest'
+  }
+  withName:ivar_vcf{
+    container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
+  }
 }
