--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -2,17 +2,17 @@ process {
   withName:seqyclean{
     container = 'staphb/seqyclean:1.10.09'
   }
-  withName:fastp{
-    container = 'bromberglab/fastp:latest'
-  }
+  //withName:fastp{
+  //  container = 'bromberglab/fastp:latest'
+  //}
   withName:fastqc{
-    container = 'staphb/fastqc:latest'
+    container = 'staphb/fastqc:0.11.9'
   }
   withName:bwa{
     container = 'staphb/bwa:0.7.17'
   }
   withName:minimap2{
-    container = 'staphb/minimap2:latest'
+    container = 'staphb/minimap2:2.18'
   }
   withName:sort{
     container = 'staphb/samtools:1.12'
@@ -48,7 +48,7 @@ process {
     container = 'staphb/bedtools:2.30.0'
   }
   withName:bamsnap{
-    container = 'danielmsk/bamsnap:latest'
+    container = 'danielmsk/bamsnap:0.2.15'
   }
   withName:samtools_ampliconstats{
     container = 'staphb/samtools:1.12'
@@ -60,25 +60,26 @@ process {
     container = 'neherlab/nextclade:0.14.1'
   }
   withName:summary{
-    container = 'staphb/parallel-perl:latest'
+    container = 'staphb/parallel-perl:20200722'
   }
   withName:combined_summary{
-    container = 'staphb/parallel-perl:latest'
+    container = 'staphb/parallel-perl:20200722'
   }
   withName:mafft{
-    container = 'staphb/mafft:latest'
+    container = 'staphb/mafft:7.475'
   }
   withName:snpdists{
-    container = 'staphb/snp-dists:latest'
+    container = 'staphb/snp-dists:0.6.2'
   }
   withName:iqtree{
-    container = 'staphb/iqtree:latest'
+    container = 'staphb/iqtree:1.6.7'
+    // there is already iqtree2 !
   }
   withName:rename{
-    container = 'staphb/parallel-perl:latest'
+    container = 'staphb/parallel-perl:20200722'
   }
   withName:combine_fastas{
-    container = 'staphb/parallel-perl:latest'
+    container = 'staphb/parallel-perl:20200722'
   }
   withName:mqc{
     container = 'ewels/multiqc:1.10.1'
@@ -97,6 +98,15 @@ process {
   }
   withName:SC2Ref_matched_reads{
     container = 'staphb/samtools:1.12'
+  }
+  withName:samtools_insertsizes{
+    container = 'staphb/samtools:1.12'
+  }
+  withName:pacbam_orfs{
+    container = 'cibiobcg/pacbam:1.6.0'
+  }
+  withName:ivar_vcf{
+    container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
   }
 
 }
