--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -2,26 +2,18 @@ singularity {
   enabled = true
   autoMounts = true
   cacheDir = "SINGULARITY_CACHE"
+  cacheDir = " ***replace with your own path here***
 }
-
-
-// containers for our custom scripts
-pacbam_container = 'cibiobcg/pacbam:latest'
-ivar_vcf_container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
-vadr_container = 'staphb/vadr:latest'
-mqc_container = 'ewels/multiqc:latest'
-aocd_bwa_container = 'staphb/bwa:latest'
-aocd_samtools_container = 'staphb/samtools:latest'
-SC2Ref_matched_reads_container = 'staphb/samtools:latest'
 
 // this will clean up the work directory after each run
 cleanup = true
+
+//note: add container info in the containers.config file !
 
 includeConfig 'containers.config'
 //includeConfig 'containers_fixedversion.config'
 
 process {
-
 
   errorStrategy = 'retry'
   maxRetries = 1
@@ -30,43 +22,38 @@ process {
   memory = '8 GB'
 
   withName:pacbam{
-    container = pacbam_container
+    cpus = 4
+    memory = '8 GB'
   }
   withName:pacbam_orfs{
-    container = pacbam_container
+    cpus = 4
+    memory = '8 GB'
   }
   withName:ivar_vcf{
-    container = ivar_vcf_container
     cpus = 2
     memory = '8 GB'
   }
   withName:vadr{
-    container = vadr_container
     cpus = 2
     memory = '8 GB'
   }
   withName:mqc{
-    container = mqc_container
     cpus = 2
     memory = '8 GB'
   }
   withName:aocd_bwa{
-    container = aocd_bwa_container
-    cpus = 4
+    cpus = 8
     memory = '8 GB'
   }
   withName:aocd_samtools{
-    container = aocd_samtools_container
-    cpus = 4
+    cpus = 8
     memory = '8 GB'
   }
   withName:SC2Ref_matched_reads{
-    container = SC2Ref_matched_reads_container
     cpus = 4
     memory = '8 GB'
   }
   withName:samtools_insertsizes{
-    container = aocd_samtools_container
     cpus = 4
     memory = '8 GB'
   }
