update for Pangolin v3.0.5

--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -54,7 +54,8 @@ process {
     container = 'staphb/samtools:1.12'
   }
   withName:pangolin{
-    container = 'staphb/pangolin:2.3.8-pangolearn-2021-04-14'
+    //container = 'staphb/pangolin:2.3.8-pangolearn-2021-04-14'
+    container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
   }
   withName:nextclade{
     container = 'neherlab/nextclade:0.14.1'
