--- a/Cecret/configs/containers.config
+++ b/Cecret/configs/containers.config
@@ -54,7 +54,9 @@ process {
     container = 'staphb/samtools:latest'
   }
   withName:pangolin{
-    container = 'staphb/pangolin:latest'
+    //container = 'staphb/pangolin:latest'
+    // pangolin v3.0 introduced quite a different output format
+    container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
   }
   withName:nextclade{
     container = 'neherlab/nextclade:latest'
