tidy up code and rename 2 processes

--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -91,10 +91,10 @@ process {
   withName:vadr{
     container = 'staphb/vadr:1.2'
   }
-  withName:aocd_bwa{
+  withName:coverage_depth_bwa{
     container = 'staphb/bwa:0.7.17'
   }
-  withName:aocd_samtools{
+  withName:coverage_depth_samtools{
     container = 'staphb/samtools:1.12'
   }
   withName:SC2Ref_matched_reads{
