--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -2,7 +2,6 @@ singularity {
   enabled = true
   autoMounts = true
   cacheDir = "SINGULARITY_CACHE"
-  cacheDir = " ***replace with your own path here***
 }
 
 // this will clean up the work directory after each run
@@ -12,6 +11,10 @@ cleanup = true
 
 includeConfig 'containers.config'
 //includeConfig 'containers_fixedversion.config'
+
+//# For process kraken2
+params.kraken2 = true
+params.kraken2_db = ' ***replace with your own path here***'
 
 process {
 
@@ -41,11 +44,11 @@ process {
     cpus = 2
     memory = '8 GB'
   }
-  withName:aocd_bwa{
+  withName:coverage_depth_bwa{
     cpus = 8
     memory = '8 GB'
   }
-  withName:aocd_samtools{
+  withName:coverage_depth_samtools{
     cpus = 8
     memory = '8 GB'
   }
