--- a/Cecret/configs/containers.config
+++ b/Cecret/configs/containers.config
@@ -91,10 +91,10 @@ process {
   withName:vadr{
     container = 'staphb/vadr:latest'
   }
-  withName:aocd_bwa{
+  withName:coverage_depth_bwa{
     container = 'staphb/bwa:latest'
   }
-  withName:aocd_samtools{
+  withName:coverage_depth_samtools{
     container = 'staphb/samtools:latest'
   }
   withName:SC2Ref_matched_reads{
