change pacbam to pacbam_amplicons; add docs folder

--- a/Cecret/configs/containers.config
+++ b/Cecret/configs/containers.config
@@ -85,7 +85,7 @@ process {
   withName:mqc{
     container = 'ewels/multiqc:latest'
   }
-  withName:pacbam{
+  withName:pacbam_amplicons{
     container = 'cibiobcg/pacbam:latest'
   }
   withName:vadr{
