--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -85,7 +85,7 @@ process {
   withName:mqc{
     container = 'ewels/multiqc:1.10.1'
   }
-  withName:pacbam{
+  withName:pacbam_amplicons{
     container = 'cibiobcg/pacbam:1.6.0'
   }
   withName:vadr{
