--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -24,7 +24,7 @@ process {
   cpus = 8
   memory = '8 GB'
 
-  withName:pacbam{
+  withName:pacbam_amplicons{
     cpus = 4
     memory = '8 GB'
   }
