update config file to standard ini file format

--- a/Cecret/configs/internal/settings.ini
+++ b/Cecret/configs/internal/settings.ini
@@ -1,2 +1,4 @@
+# parameters for the R container
+[R_CONTAINER]
 R_IMG= ***replace with your own path here***
 R_LIB=library://ajwnewkirk/default/sc2clia-cecret-r_v2.1.0:latest
