--- a/Cecret/configs/containers.config
+++ b/Cecret/configs/containers.config
@@ -59,7 +59,8 @@ process {
     container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
   }
   withName:nextclade{
-    container = 'neherlab/nextclade:latest'
+    //container = 'neherlab/nextclade:latest'
+    container = 'nextstrain/nextclade:0.14.1'
   }
   withName:summary{
     container = 'staphb/parallel-perl:latest'
