--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -58,7 +58,8 @@ process {
     container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
   }
   withName:nextclade{
-    container = 'neherlab/nextclade:0.14.1'
+    //container = 'neherlab/nextclade:0.14.1'
+    container = 'nextstrain/nextclade:0.14.1'
   }
   withName:summary{
     container = 'staphb/parallel-perl:20200722'
