--- a/Cecret/configs/singularity.config
+++ b/Cecret/configs/singularity.config
@@ -9,8 +9,8 @@ cleanup = true
 
 //note: add container info in the containers.config file !
 
-includeConfig 'containers.config'
-//includeConfig 'containers_fixedversion.config'
+//includeConfig 'containers.config'
+includeConfig 'containers_fixedversion.config'
 
 //# For process kraken2
 params.kraken2 = true
