--- a/Cecret/configs/internal/singularity.config
+++ b/Cecret/configs/internal/singularity.config
@@ -9,8 +9,8 @@ cleanup = true
 
 //note: add container info in the containers.config file !
 
-//includeConfig 'containers.config'
-includeConfig 'containers_fixedversion.config'
+//includeConfig "$PWD/Cecret/configs/containers.config"
+includeConfig "$PWD/Cecret/configs/containers_fixedversion.config"
 
 profiles {
 
