update to pangolin:3.1.11-pangolearn-2021-08-09

--- a/Cecret/configs/containers.config
+++ b/Cecret/configs/containers.config
@@ -54,9 +54,7 @@ process {
     container = 'staphb/samtools:latest'
   }
   withName:pangolin{
-    //container = 'staphb/pangolin:latest'
-    // pangolin v3.0 introduced quite a different output format
-    container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
+    container = 'staphb/pangolin:latest'
   }
   withName:nextclade{
     //container = 'neherlab/nextclade:latest'
