--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -55,7 +55,8 @@ process {
   }
   withName:pangolin{
     //container = 'staphb/pangolin:2.3.8-pangolearn-2021-04-14'
-    container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
+    //container = 'staphb/pangolin:3.0.5-pangolearn-2021-06-05'
+    container = 'staphb/pangolin:3.1.11-pangolearn-2021-08-09'
   }
   withName:nextclade{
     //container = 'neherlab/nextclade:0.14.1'
