use bbmap to map the filtered reads to human DNA GRCh38

--- a/Cecret/configs/internal/settings.ini
+++ b/Cecret/configs/internal/settings.ini
@@ -2,3 +2,10 @@
 [R_CONTAINER]
 R_IMG= ***replace with your own path here***
 R_LIB=library://ajwnewkirk/default/sc2clia-cecret-r_v2.1.0:latest
+
+# parameters for mapping filtered reads to human DNA GRCh38
+[BB_MAP]
+BB_IMG= ***replace with your own path here***
+BB_LIB=docker://staphb/bbtools:38.86
+BB_PATH= ***replace with your own path here***
+BB_REF= ***replace with your own path here***
