--- a/Cecret/configs/internal/singularity.config
+++ b/Cecret/configs/internal/singularity.config
@@ -19,6 +19,13 @@ profiles {
     params.kraken2 = true
     params.kraken2_db = ' ***replace with your own path here***'
 
+    // For process bbmap
+    params.BB_PATH = ' ***replace with your own path here***'
+    params.BB_REF = ' ***replace with your own path here***'
+    params.bbmap = true // map filered reads on human genome GRCh38
+    params.BB_BIND = '***set the binding path (top level recommended) for R container***'
+    params.BB_IMG = 'staphb/bbtools:38.86'
+
     // reference files for SARS-CoV-2 (part of the github repository)
     // the path is relative to workflow launch directory
     params.reference_genome = "$PWD/Cecret/configs/MN908947.3.fasta"
@@ -50,6 +57,13 @@ profiles {
     // For process kraken2 (for optional contamination determination with kraken)
     params.kraken2 = true
     params.kraken2_db = ' ***replace with your own path here***'
+
+    // For process bbmap
+    params.BB_PATH = ' ***replace with your own path here***'
+    params.BB_REF = ' ***replace with your own path here***'
+    params.bbmap = true // map filered reads on human genome GRCh38
+    params.BB_BIND = '***set the binding path (top level recommended) for R container***'
+    params.BB_IMG = 'staphb/bbtools:38.86'
 
     // reference files for SARS-CoV-2 (part of the github repository)
     // the path is relative to workflow launch directory
