update bbmap process to more parallel version

--- a/Cecret/configs/containers_fixedversion.config
+++ b/Cecret/configs/containers_fixedversion.config
@@ -111,5 +111,8 @@ process {
   withName:ivar_vcf{
     container = 'biocontainers/pyvcf:v0.6.8git20170215.476169c-1-deb_cv1'
   }
+  withName:bbmap{
+    container = 'staphb/bbtools:38.86'
+  }
 
 }
