move R url to config file; add SINGULARITY_TMPDIR warning to readme

--- a/Cecret/configs/internal/singularity.config
+++ b/Cecret/configs/internal/singularity.config
@@ -16,11 +16,17 @@ profiles {
     params.kraken2 = true
     params.kraken2_db = ' ***replace with your own path here***'
 
+    params.containers_config = "$PWD/Cecret/configs/containers_fixedversion_hash.config"
+
     // For process bbmap
     params.BB_PATH = ' ***replace with your own path here***'
     params.BB_REF = ' ***replace with your own path here***'
     params.bbmap = false // map filered reads on human genome GRCh38
     params.BB_BIND = '***set the binding path (top level recommended) for R container***'
+
+    // For R container
+    params.R_IMG = "$PWD/SINGULARITY_CACHE/sc2clia-cecret-r_v2.1.0"
+    params.R_LIB = "library://ajwnewkirk/default/sc2clia-cecret-r_v2.1.0:latest"
 
     // reference files for SARS-CoV-2 (part of the github repository)
     // the path is relative to workflow launch directory
@@ -54,11 +60,17 @@ profiles {
     params.kraken2 = true
     params.kraken2_db = ' ***replace with your own path here***'
 
+    params.containers_config = "$PWD/Cecret/configs/containers_fixedversion_hash.config"
+
     // For process bbmap
     params.BB_PATH = ' ***replace with your own path here***'
     params.BB_REF = ' ***replace with your own path here***'
     params.bbmap = false // map filered reads on human genome GRCh38
     params.BB_BIND = '***set the binding path (top level recommended) for R container***'
+
+    // For R container
+    params.R_IMG = "$PWD/SINGULARITY_CACHE/sc2clia-cecret-r_v2.1.0"
+    params.R_LIB = "library://ajwnewkirk/default/sc2clia-cecret-r_v2.1.0:latest"
 
     // reference files for SARS-CoV-2 (part of the github repository)
     // the path is relative to workflow launch directory
