separate out append_table from report and turn off kraken2

--- a/Cecret/configs/internal/singularity.config
+++ b/Cecret/configs/internal/singularity.config
@@ -13,7 +13,7 @@ profiles {
 
   v3 {
     // For process kraken2 (for optional contamination determination with kraken)
-    params.kraken2 = true
+    params.kraken2 = false
     params.kraken2_db = ' ***replace with your own path here***'
 
     params.containers_config = "$PWD/Cecret/configs/containers_fixedversion_hash.config"
@@ -57,7 +57,7 @@ profiles {
   // specify params for artic v4 primers
   v4 {
     // For process kraken2 (for optional contamination determination with kraken)
-    params.kraken2 = true
+    params.kraken2 = false
     params.kraken2_db = ' ***replace with your own path here***'
 
     params.containers_config = "$PWD/Cecret/configs/containers_fixedversion_hash.config"
